--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="team-card" data-audio="assets/audio/uyirmozhi.mp3">
         <div class="card-inner">
           <div class="card-front">
-            <img class="team-logo" src="assets/logos/1.png" alt="Team 1" />
+            <img class="team-logo" src="/FTC14_Anothjeev/assets/logos/1.png" alt="Team 1" />
           </div>
           <div class="card-back">
             <h3>உயிர் மொழி</h3>
